--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href=estilos/mobilefirst.css">
+    <link rel="stylesheet" href="estilos/mobilefirst.css">
 </head>
 <body>
     <main>
        <section id="login">
         <div id="infeite">
-            imagem 
+           
         </div>
-        <div id="fomulário">
+        <div id="fomulario">
             <h1>Login</h1>
             <p> Bem vindo(a) a Comunidade Sakura!  Faça o seu login para acessar a sua conta de menbro e configurar o seu ambinete exclusivo.</p>
             <form action="login.php" method="post"></form>
