--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="estilos/mobilefirst.css">
+    <link rel="stylesheet" href="estilos/mediaquery.css">
 </head>
 <body>
     <main>
@@ -12,10 +13,20 @@
         <div id="infeite">
            
         </div>
-        <div id="fomulario">
+        <div id="ola"> <!--Para nomear essa div anteriormente eu usei um id formulário e nada estava funcionando, talvez tenah sido um bug, ou essa palavra é reservada, ou éra porque não estava atualizado o meu vs code, porém, funcionou as configurações de estilo só após eu mudar esse nome-->
             <h1>Login</h1>
-            <p> Bem vindo(a) a Comunidade Sakura!  Faça o seu login para acessar a sua conta de menbro e configurar o seu ambinete exclusivo.</p>
-            <form action="login.php" method="post"></form>
+            <p> Bem vindo(a) a Comunidade Sakura!</p>
+            <p> Faça o seu login para acessar a sua conta menbro e configurar o seu ambinete exclusivo.</p>
+            <form action="login.php" method="post">
+                <p>
+                    <label for="iemail">E-mail</label>
+                    <input type="text" name="email" id="iemail">
+                </p>
+                <p>
+                    <label for="isenha">Senha</label> 
+                    <input type="text" name="senha" id="isenha">
+                </p>
+            </form>
 
         </div>
        </section>
