conclusão do formulário

--- a/index.html
+++ b/index.html
@@ -37,10 +37,15 @@
                         <input type="password" name="senha" id="isenha" placeholder="Digite sua senha." autocomplete="current-password" required >
                          <label for="isenha">Senha</label>
                 </div>
-                <input type="submit" value="Enviar"> Esqueci minha senha
-                <a href="#"> <span class="material-symbols-outlined">
-                    mail
-                    </span>
+                
+                    <input type="submit" value="Enviar">
+                <p id="esqueci"> 
+                    
+                   <a href=""  class="botao">Esqueci minha senha</a>
+                         <span class="material-symbols-outlined">
+                        mail
+                        </span>
+                </p>
             </form>
 
         </div>
