--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <span class="material-symbols-outlined">
                         mail
                         </span>
-                        <input type="text" name="email" id="iemail" placeholder="Digite o seu E-mail." autocomplete="email" required maxlength="30">
+                        <input type="text" name="email"    id="iemail" placeholder="Digite o seu E-mail." autocomplete="email" required maxlength="30" class="campo">
                          <label for="iemail">E-mail</label>
                 </div>
                 <div id="senha">
@@ -34,7 +34,7 @@
                     <span class="material-symbols-outlined">
                         Passkey
                         </span>
-                        <input type="password" name="senha" id="isenha" placeholder="Digite sua senha." autocomplete="current-password" required >
+                        <input type="password" name="senha" id="isenha" placeholder="Digite sua senha." autocomplete="current-password" required class="campo">
                          <label for="isenha">Senha</label>
                 </div>
                 
